# he-ring

./: .gitignore  Cargo.toml  Readme.md  bootstrap_257_1_1_thin_hypercube.json  hypercube_base.json  hypercube_base_257.json  hypercube_bootstrap.json  hypercube_bootstrap_17.json  hypercube_bootstrap_257.json  hypercube_n256_p17_e1.json  hypercube_n256_p17_e2.json  hypercube_n256_p17_e3.json  hypercube_n35113_p2_e9.json  hypercube_n65536_p17_e3.json  inner_prod.s  out  out1  out2  out3  out4  out5  out6  performance.txt  performance_hexl.txt
examples/: bfv_basics.rs
examples/bfv_basics/: Readme.md  main.rs
examples/bfv_impl_v1/: Readme.md  main.rs
examples/bfv_impl_v2/: Readme.md  main.rs
examples/bgv_basics/: Readme.md  main.rs
src/: bfv.rs  cyclotomic.rs  lib.rs  profiling.rs  serialization_helper.rs
src/bfv/: bootstrap.rs  coeff_or_doublerns.rs  double_rns.rs  mod.rs  single_rns.rs
src/bgv/: bootstrap.rs  mod.rs  modswitch.rs  modwitch.rs  noise_estimator.rs  strategy.rs
src/ciphertext_ring/: bxv.rs  double_rns_managed.rs  double_rns_ring.rs  mod.rs  poly_remainder.rs  serialization.rs  single_rns_ring.rs
src/ciphertext_ring/gadget_product/: double_rns.rs  mod.rs  single_rns.rs
src/circuit/: evaluator.rs  mod.rs  serialization.rs
src/complexfft/: automorphism.rs  complex_fft_ring.rs  mod.rs  odd_cyclotomic.rs  pow2_cyclotomic.rs
src/digitextract/: mod.rs  polys.rs  precomputed.rs
src/doublerns/: automorphism.rs  double_rns_ring.rs  external_product.rs  gadget_product.rs  mod.rs  odd_cyclotomic.rs  pow2_cyclotomic.rs
src/gadget_product/: digits.rs  mod.rs
src/lintransform/: broadcast.rs  composite.old.rs  composite.rs  matmul.rs  mod.rs  pow2.rs  trace.rs
src/ntt/: dyn_convolution.rs  mod.rs  ntt_convolution.rs
src/number_ring/: hypercube.rs  interpolate.rs  mod.rs  odd_cyclotomic.rs  pow2_cyclotomic.rs  quotient.rs
src/number_ring/hypercube/: isomorphism.rs  mod.rs  serialization.rs  structure.rs
src/rings/: bxv.rs  convolution.rs  decomposition.rs  decomposition_ring.rs  double_rns_managed.rs  double_rns_ring.old.rs  double_rns_ring.rs  dynconv.rs  gadget_product.rs  hexl_conv.rs  hypercube.rs  interpolate.rs  mod.rs  ntt_conv.rs  ntt_convolution.rs  ntt_ring.rs  number_ring.rs  number_ring_quo.rs  odd_cyclotomic.old.rs  odd_cyclotomic.rs  poly_remainder.rs  pow2_cyclotomic.rs  single_rns_ring.rs  slots.rs
src/rings/gadget_product/: double_rns.rs  managed.rs  mod.rs  single_rns.rs
src/rnsconv/: approx_lift.rs  bfv_rescale.rs  bgv_rescale.rs  lift.rs  matrix_lift.rs  mod.rs  shared_lift.rs
