[package]
name = "he-ring"
version = "0.3.1"
edition = "2021"

repository = "https://github.com/FeanorTheElf/he-ring"
homepage = "https://github.com/FeanorTheElf/he-ring"
keywords = ["cryptography", "encryption", "fhe", "homomorphic"]
readme = "Readme.md"
description = "A library that provides fast implementations of rings commonly used in homomorphic encryption, built on feanor-math."
license = "MIT"

[lib]
crate-type = ["rlib"]
bench = true

[dependencies]
feanor-math = { git = "https://github.com/feanortheelf/feanor-math.git", features = ["generic_tests", "unstable-enable"] }
# feanor-math-hexl = { path = "/mnt/f/Users/Simon/Documents/Projekte/feanor-math-hexl", optional = true }
oorandom = "11.1.3"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
oorandom = "11.1.3"

[features]
use_hexl = [
    # "dep:feanor-math-hexl"
]
record_timings = []
force_naive_gadget_product = []
force_rns_conversion_full_reduction = []
generic_tests = []

[profile.profiling]
inherits = "bench"
debug = true
lto = "fat"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"

# to allow running two different tests at the same time (i.e. cargo uses different directory for output executable)
[profile.test2]
inherits = "test"
